--- a/daves burgers 1.html
+++ b/daves burgers 1.html
@@ -17,10 +17,10 @@
             <h1>Welcome to Davies Burgers</h1>
             <p>Login to create your perfect burger!</p>
             <label for="username">Username:</label>
-            <input type="text" name="username">
+            <input type="text" name="username" placeholder="Username">
             <br>
-            <label for="user-pw">Password:</label>
-            <input type="password" name="user-pw" id="user-pw">
+            <label for=" user-pw ">Password:</label>
+            <input type="password " name="user-pw " id="user-pw " placeholder="Password">
         </form>
 
     </section>
