--- a/daves burgers 1.html
+++ b/daves burgers 1.html
@@ -16,11 +16,21 @@
         <form action="/practice.html" method="post">
             <h1>Welcome to Davies Burgers</h1>
             <p>Login to create your perfect burger!</p>
-            <label for="username">Username:</label>
-            <input type="text" name="username" placeholder="Username">
-            <br>
-            <label for=" user-pw ">Password:</label>
-            <input type="password " name="user-pw " id="user-pw " placeholder="Password">
+
+            <section class="login">
+                <label for="username">Username:</label>
+                <input type="text" name="username" placeholder="Username" required>
+                <br>
+                <label for=" user-pw ">Password:</label>
+                <input type="password " name="user-pw " id="user-pw " placeholder="Password" required>
+            </section>
+
+
+            <hr>
+
+            <section class="submission ">
+                <input type="submit">
+            </section>
         </form>
 
     </section>
